# externals

AMF_v1.4.29/: CMakeLists.txt
Video_Codec_SDK_11.1.5/: CMakeLists.txt
libvpl_v2023.4.0/: CMakeLists.txt
nv-codec-headers_n11.1.5.2/include/ffnvcodec/: dynlink_loader.h
